--- a/index.html
+++ b/index.html
@@ -5,25 +5,125 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>首頁</title>
+  <title>week-5</title>
   <link rel="stylesheet" href="./assets/style/all.css">
 </head>
 
 <body>
-  <header class="header">
-    這是 header
-  </header>
+  <nav class="navbar bg-primary font-m">
+    <a href=""><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/logo.png"
+        alt="logo"></a>
+    <ul class="navbar-link">
+      <li class="nav-link-a"><a href="#">系列鏡框</a></li>
+      <li class="nav-link-a"><a href="#">門市據點</a></li>
+      <li class="nav-link-a"><a href="#">部落格</a></li>
+      <li class="nav-link-a"><a href="#">常見問題</a></li>
+    </ul>
+  </nav>
 
   
-<h1>
-  這是一段話 
-</h1>
+<div class="content">
+  <div class="banner">
+      <div class="container">
+          <div class="header">
+              <h1>門市據點</h1>
+              <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week4/icon-location.svg"
+                  alt="location">
+          </div>
+      </div>
+  </div>
 
-<div class="box"></div>
+  <div class="container">
+      <div class="drop">
+          <h2 class="font-l">選擇分店</h2>
+          <ul class="drop-mean">
+              <li>台北中山旗艦店</li>
+              <ul class="drop-down-list">
+                  <li>台中勤美店</li>
+                  <li>台南孔廟店</li>
+                  <li>高雄大港店</li>
+              </ul>
+          </ul>
+      </div>
 
-  <footer class="footer">
-    footer
-  </footer>
+      <div class="main">
+          <div class="card">
+              <div class="photo">
+                  <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week4/locate1.jpeg"
+                      alt="locate">
+              </div>
+              <div class="text">
+                  <h2 class="font-l">台北中山旗艦店</h2>
+                  <ul class="card-data">
+                      <li>
+                          <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week4/icon-phone-black.svg"
+                              alt="phone">
+                          <a href="tel:000-1234" class="text-dark">電話：(02)000-1234</a></li>
+                      <li>
+                          <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week4/icon-clock-black.svg"
+                              alt="clock">
+                          營業時間：10:00-21:00</li>
+                      <li>
+                          <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week4/icon-map.svg"
+                              alt="map">
+                          地址：台北市中山區南京東路25巷2-1號</li>
+                  </ul>
+              </div>
+          </div>
+          <div class="map">
+              <img src="https://upload.cc/i1/2020/11/11/CsaMxm.png" alt="map">
+          </div>
+      </div>
+  </div>
+</div>
+
+  <div class="footer bg-primary">
+    <div class="container">
+      <div class="footer-link">
+        <ul class="footer-nav">
+          <li><a href="#">首頁</a></li>
+          <li><a href="#">系列鏡框</a></li>
+          <li><a href="#">門市據點</a></li>
+          <li><a href="#">部落格</a></li>
+          <li><a href="#">常見問題</a></li>
+        </ul>
+        <ul class="footer-icon">
+          <li><a href=""><img
+                src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-fb.svg"
+                alt="footer-icon"></a></li>
+          <li><a href=""><img
+                src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-ig.svg"
+                alt="footer-icon"></a></li>
+          <li><a href=""><img
+                src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-line.svg"
+                alt="footer-icon"></a></li>
+        </ul>
+        <ul class="phone-mail font-xl">
+          <li>
+            <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-phone.svg"
+              alt=""><a href="tel:0800-000-000">
+              0800-000-000</a></li>
+          <li class="border-style">
+            <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/icon-mail.svg"
+              alt=""><a href="mail:glasses@business.com">
+              glasses@business.com</a></li>
+        </ul>
+      </div>
+
+      <ul class="copyright">
+        <li class="copyright-logo">
+          <a href="#"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/logo.png"
+              alt="logo"></a>
+        </li>
+        <li>
+          <p class="text-light">Copyright © 2020 Glasses.All rights reserved.</p>
+        </li>
+        <li class="copyright-link-ml-auto"><a href="#">隱私權政策</a></li>
+        <li><a href="#">服務條款</a></li>
+      </ul>
+    </div>
+  </div>
+
   <script src="./assets/js/vendors.js"></script>
   <script src="./assets/js/all.js"></script>
 </body>
