--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <a href=""><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/week3/logo.png"
         alt="logo"></a>
     <ul class="navbar-link">
-      <li class="nav-link-a"><a href="#">系列鏡框</a></li>
-      <li class="nav-link-a"><a href="#">門市據點</a></li>
+      <li class="nav-link-a"><a href="commodity.html">系列鏡框</a></li>
+      <li class="nav-link-a"><a href="index.html">門市據點</a></li>
       <li class="nav-link-a"><a href="#">部落格</a></li>
       <li class="nav-link-a"><a href="#">常見問題</a></li>
     </ul>
